# fol_embedding

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
python/learned_equational_rewriting/: __init__.py
src/: lib.rs  logic.rs
